# fdo-manufactoring-frontend

./: .gitignore  AI.md  Cargo.toml  Taskfile.yaml
scripts/: di-go-fdo.sh  mf-server.sh  rv-server.sh
src/: App.tsx  main.rs  main.tsx
src/app/: rvinfo.tsx
src/components/: app-sidebar.tsx
src/components/ui/: table.tsx
