[package]
name = "fdo-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
eyre = "0.6.12"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["trace"]}
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.23"
